@@ -1,3 +1,7 @@
+2000-05-01  Chema Celorio  <chema@celorio.com>
+
+	* email/email.c (email): memleak.
+
 2000-05-01  Jason Leach  <leach@wam.umd.edu>
 
 	* email/email.c (email_clicked): removed 4 lines of dealing with
