@@ -1,3 +1,7 @@
+2000-05-01  Chema Celorio  <chema@celorio.com>
+
+	* document.c (gedit_document_new): leak
+
 2000-05-01  Jason Leach  <leach@wam.umd.edu>
 
 	* view.c (doc_insert_text_cb): added a call to insert_into_buffer,
